--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>index</title>
-    <meta http-equiv="refresh" content="0; url = https://project-444.herokuapp.com/homepagePEF.php" />
+    <meta http-equiv="refresh" content="0; url = https://project-444.herokuapp.com/homepage.php" />
 </head>
 <body>
     <p>Redirecting to another URL</p>
